# esp32_live2d

./: CMakeLists.txt
components/display/: CMakeLists.txt  display.c  display_ili9341.c  display_ili9341.h  display_priv.h  display_rgba8888.c  display_rgba8888_s3.S  display_touch.c
components/display/include/: display.h
components/live2d_pgl/: CMakeLists.txt  live2d_pgl_app.cpp  live2d_pgl_host_internal.hpp  pgl_esp32s3_f32_simd.S
components/live2d_pgl/include/: live2d_pgl_app.h
main/: CMakeLists.txt  main.cpp
